fixed username spacing problem in navbar

--- a/src/App.css
+++ b/src/App.css
@@ -572,36 +572,35 @@ input[type=password] {
 #name {
 	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
 	background-size: 20px 20px;
-	background-position: 11px 8px;
+	background-position: 11px 12px;
 	background-repeat: no-repeat;
 }
 
 #name:focus {
 	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
 	background-size: 20px 20px;
-	background-position: 8px 5px;
-	background-position: 11px 8px;
+	background-position: 11px 12px;
 	background-repeat: no-repeat;
 }
 
 #email {
 	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
 	background-size: 20px 20px;
-	background-position: 11px 8px;
+	background-position: 11px 12px;
 	background-repeat: no-repeat;
 }
 
 #email:focus {
 	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
 	background-size: 20px 20px;
-	background-position: 11px 8px;
+	background-position: 11px 12px;
 	background-repeat: no-repeat;
 }
 
 #comment {
 	background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
 	background-size: 20px 20px;
-	background-position: 11px 8px;
+	background-position: 11px 12px;
 	background-repeat: no-repeat;
 }
 
